src/pages/CountryDetail/CountryDetail.scss
.details-container {
    display: flex;
    gap: 36px;
    padding: 0px 34px 0px 44px;

    .info-container {
        display: flex;
        flex-direction: column;
        gap: 20px;
        width: 55vw;
        padding: 20px;
        border-radius: 10px;
        background-color: #fff;
        color: #252525;
        
        .name {
            display: flex;
            justify-content: space-between;
            align-items: center;
            margin-bottom: 8px;
            font-size: 20px;
            font-weight: 600;
        }

        .info {
            .title {
                font-size: 12px;
                font-weight: 400;
            }

            .text {
                margin-top: 5px;
                font-size: 15px;
                font-weight: 600;
            }
        }
    }

    .pics-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 25px;
        width: 35vw;
        height: 450px;
        padding: 17px 60px 45px;
        border-radius: 10px;
        color: #252525;
        background-color: #fff;

        .pic {
            display: flex;
            flex-direction: column; 
            .text {
                text-align: center;
                font-size: 20px;
                font-weight: 600;
            };

            .img-container {
                min-width: 230px;
                height: 20vh;
                margin-top: 25px;
                .img {
                    width: 100%;
                    height: 100%;
                    object-fit: contain;
                };
            };
        }
    }
}

